@@ -14,6 +14,10 @@ S <mave> comment goes here
     'B' : means a BugFix
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
+    ==> 123 - 30/10/2006 <==
+
+C <mave> <outfunction> tag now is handled by xml I/O
+
     ==> 122 - 30/10/2006 <==
 
 C <mave> updated the todo list
